{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 38,
  "lineage": "13e76611-995f-8a7e-0f58-af22691ed817",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b77a6e64c07ddd38",
            "arn": "arn:aws:ec2:us-east-1:733717814278:elastic-ip/eipalloc-0b77a6e64c07ddd38",
            "domain": "vpc",
            "id": "eipalloc-0b77a6e64c07ddd38",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-67-113.compute-1.amazonaws.com",
            "public_ip": "52.21.67.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dcfly-prod-nat-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-nat-eip",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:internet-gateway/igw-0ee6e57aae7e4affe",
            "id": "igw-0ee6e57aae7e4affe",
            "owner_id": "733717814278",
            "tags": {
              "Name": "dcfly-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-igw",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733717814278:loadbalancer/app/dcfly-prod-alb/566cefcff6ae9c66",
            "arn_suffix": "app/dcfly-prod-alb/566cefcff6ae9c66",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dcfly-prod-alb-1326491345.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:733717814278:loadbalancer/app/dcfly-prod-alb/566cefcff6ae9c66",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dcfly-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a05b3e26adc5f7e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0138985a35282e26c"
              },
              {
                "subnet_id": "subnet-0547ba734104fb76b"
              }
            ],
            "subnets": [
              "subnet-0138985a35282e26c",
              "subnet-0547ba734104fb76b"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733717814278:listener/app/dcfly-prod-alb/566cefcff6ae9c66/78ccba855e5e7a2d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733717814278:targetgroup/dcfly-prod-tg/c570cfb2e54e274f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733717814278:listener/app/dcfly-prod-alb/566cefcff6ae9c66/78ccba855e5e7a2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:733717814278:loadbalancer/app/dcfly-prod-alb/566cefcff6ae9c66",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733717814278:targetgroup/dcfly-prod-tg/c570cfb2e54e274f",
            "arn_suffix": "targetgroup/dcfly-prod-tg/c570cfb2e54e274f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733717814278:targetgroup/dcfly-prod-tg/c570cfb2e54e274f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dcfly-prod-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b77a6e64c07ddd38",
            "association_id": "eipassoc-03b8d39cdebbe7f37",
            "connectivity_type": "public",
            "id": "nat-0cfdace4e7de8f865",
            "network_interface_id": "eni-01c76d0096e30aa4f",
            "private_ip": "10.30.0.166",
            "public_ip": "52.21.67.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0138985a35282e26c",
            "tags": {
              "Name": "dcfly-prod-nat"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-nat",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:route-table/rtb-04f65ecb6b48fa5d0",
            "id": "rtb-04f65ecb6b48fa5d0",
            "owner_id": "733717814278",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dcfly-prod-db-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-db-rt",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:route-table/rtb-0d237a9ef2ed63100",
            "id": "rtb-0d237a9ef2ed63100",
            "owner_id": "733717814278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfdace4e7de8f865",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dcfly-prod-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-private-rt",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:route-table/rtb-0c5588637dde2c4b2",
            "id": "rtb-0c5588637dde2c4b2",
            "owner_id": "733717814278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee6e57aae7e4affe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dcfly-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-public-rt",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090f22af1ffe7c449",
            "route_table_id": "rtb-04f65ecb6b48fa5d0",
            "subnet_id": "subnet-0bb807436a186d74c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ee247cd65b036cf",
            "route_table_id": "rtb-04f65ecb6b48fa5d0",
            "subnet_id": "subnet-0581013a1813737a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04170da33741a359f",
            "route_table_id": "rtb-0d237a9ef2ed63100",
            "subnet_id": "subnet-0139b2366a15d7787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef360ce28da780ce",
            "route_table_id": "rtb-0d237a9ef2ed63100",
            "subnet_id": "subnet-033ad06d0e665294e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1d09e5b055d072",
            "route_table_id": "rtb-0c5588637dde2c4b2",
            "subnet_id": "subnet-0138985a35282e26c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bcd0ab02224d344",
            "route_table_id": "rtb-0c5588637dde2c4b2",
            "subnet_id": "subnet-0547ba734104fb76b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:security-group/sg-0a05b3e26adc5f7e6",
            "description": "Allow public HTTP traffic to the backend load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a05b3e26adc5f7e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dcfly-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "733717814278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dcfly-prod-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-alb-sg",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:security-group/sg-04e5607829946d550",
            "description": "Allow traffic from the ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e5607829946d550",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a05b3e26adc5f7e6"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dcfly-prod-ecs-sg",
            "name_prefix": "",
            "owner_id": "733717814278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dcfly-prod-ecs-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-ecs-sg",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:security-group/sg-0d112fe59b6b84180",
            "description": "Allow PostgreSQL from ECS tasks only",
            "egress": [],
            "id": "sg-0d112fe59b6b84180",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e5607829946d550"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dcfly-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "733717814278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dcfly-prod-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-rds-sg",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-0bb807436a186d74c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb807436a186d74c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-db-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-db-1",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-0581013a1813737a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0581013a1813737a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-db-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-db-2",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-0139b2366a15d7787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0139b2366a15d7787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-private-1",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-033ad06d0e665294e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033ad06d0e665294e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-private-2",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-0138985a35282e26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0138985a35282e26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-public-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-public-1",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:subnet/subnet-0547ba734104fb76b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0547ba734104fb76b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733717814278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcfly-prod-public-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-public-2",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            },
            "vpc_id": "vpc-0e143fe1281ae0eb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733717814278:vpc/vpc-0e143fe1281ae0eb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-088241b4834663f02",
            "default_route_table_id": "rtb-07f337a4b3a4b1c10",
            "default_security_group_id": "sg-03de3a8f6f1ba3198",
            "dhcp_options_id": "dopt-024855bc26179cc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e143fe1281ae0eb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f337a4b3a4b1c10",
            "owner_id": "733717814278",
            "tags": {
              "Name": "dcfly-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dcfly-prod-vpc",
              "Owner": "kevin-yang",
              "Project": "dcfly"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}